@@ -1,7 +1,14 @@
 package InterfacesFuncionales;
 
+import java.lang.reflect.Array;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 public class Main {
     
@@ -23,13 +30,27 @@ public class Main {
          
         jedis.forEach(x -> System.out.println(x));
         jedis.forEach(System.out::println);
-
+        //listas mutables
         System.out.println("********");
-        List jedis2=List.of( "Anakin", "Leia","Luke","Rey");
-        Predicate<String> isAjedi =x->x.equals("Rey");
-        jedis2.stream().filter(isAjedi);
-        jedis2.
-
+        List jedis2=new ArrayList<>(Arrays.asList( "Anakin", "Leia","Luke","Rey"));
+        Predicate<String> isAnotjedi =x->x.equals("Rey");
+        //Predicate<String> isAnotjedi =x->!x.equals("Rey"); Negacion para Lista 3
+        //List jedis3 =jedis2.stream().filter(isAnotjedi).toList();
+        //jedis3.stream().forEach(System.out::println);
+        //************ */
+        jedis2.removeIf(isAnotjedi);
+        jedis2.forEach(System.out::println);//error porque List.of y Array.list son inmutables
+        System.out.println("******** map reduce");
+        //Listas inmutabes  
+        List newjedis=List.of( "Anakin", "Leia","Luke","Rey");
+        var filterJedi= newjedis.stream()
+                        .filter(x->!x.equals("Rey"))
+                        .map(z->z.toString().toUpperCase())
+                        .findFirst();
+                        //.collect(Collectors.toList());
+                        System.out.println(Objects.isNull(filterJedi));
+                        System.out.println(filterJedi.get());
+    
     }
     public static void funcion (MyFunctionalInterface interfase){
         System.out.println("metodo con interfaz funcional como parametro");
